creating new branch

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
             src="https://kit.fontawesome.com/f00cdf3170.js"
             crossorigin="anonymous"
         ></script>
+        <script src="./index.js"></script>
         <title>Nathan Cai - Software Developer Trainee</title>
     </head>
     <body>
-        <!-- Nav links -->
+        <!-- Nav links 
+            when clicked user will be sent to the appropriate section-->
+
         <header class="navigation">
             <div class="navigation__logo-con">
                 <a href="#home">NJC</a>
@@ -47,6 +50,7 @@
                 id="skills"
             >
                 <h3>What I know</h3>
+                <!-- languages learnt will be listed as icons with the title underneath -->
                 <ul>
                     <li>
                         <i class="fa-brands fa-html5 fa-8x"></i>
@@ -77,6 +81,11 @@
             >
                 <h3>My Projects</h3>
                 <section>
+                    <!-- Each project container holds:
+                        - a brief image of the final product
+                        - title of the project
+                        - a brief description of the project
+                        - links to the published site and the github repo to see the code used-->
                     <div class="projects__container">
                         <img src="" alt="Project" />
                         <h4>Project Title</h4>
@@ -154,7 +163,7 @@
             </section>
             <!-- 
             Home Page 
-            My Contact details, linkedIn, GitHub, email
+            My Contact details, linkedIn page, GitHub profile, email address
             -->
             <section
                 class="container__section container__section--primary-color"
