added navigation hide on scroll effect

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
             src="https://kit.fontawesome.com/f00cdf3170.js"
             crossorigin="anonymous"
         ></script>
-        <script src="./index.js"></script>
+        <script src="./index.js" defer></script>
         <title>Nathan Cai - Software Developer Trainee</title>
     </head>
     <body>
         <!-- Nav links 
             when clicked user will be sent to the appropriate section-->
 
-        <header class="navigation">
+        <header class="navigation visible">
             <div class="navigation__logo-con">
                 <a href="#home">NJC</a>
             </div>
@@ -154,11 +154,15 @@
                         An aspiring software developer, I enjoy creating things
                         and admiring the finished product.
                     </p>
-                    <p>Besides that I'm reading One Piece for the nth time.</p>
                     <p>
-                        My current goal is to do accomplish everything my past
-                        self thought would be impossible.
+                        I began my journey in 2021, where I learnt python during
+                        University, without much thought about making it a
+                        career. As I continued to learn more and more I started
+                        to wonder if I could be able to get a job without a
+                        proper Undergraduate degree, which made me want to try
+                        pursue a career in the field.
                     </p>
+                    <p>Besides that I'm reading One Piece for the nth time.</p>
                 </div>
             </section>
             <!-- 
