Updated icons and skills section to include all the skills i will learn with nology

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             crossorigin="anonymous"
         ></script>
         <script src="./index.js" defer></script>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+        />
         <title>Nathan Cai - Software Developer Trainee</title>
     </head>
     <body>
@@ -53,20 +57,38 @@
                 <!-- languages learnt will be listed as icons with the title underneath -->
                 <ul>
                     <li>
-                        <i class="fa-brands fa-html5 fa-8x"></i>
+                        <i class="devicon devicon-html5-plain"></i>
                         <p>HTML</p>
                     </li>
                     <li>
-                        <i class="fa-brands fa-css3-alt fa-8x"></i>
+                        <i class="devicon devicon-css3-plain"></i>
                         <p>CSS</p>
                     </li>
                     <li>
-                        <i class="fa-brands fa-sass fa-8x"></i>
-                        <p>SCSS</p>
+                        <i class="devicon devicon-sass-original"></i>
+                        <p>SASS</p>
                     </li>
                     <li>
-                        <i class="fa-brands fa-square-js fa-8x"></i>
+                        <i class="devicon devicon-javascript-plain"></i>
                         <p>JS</p>
+                    </li>
+                    <li>
+                        <i class="devicon devicon-java-plain"></i>
+                        <p>Java</p>
+                    </li>
+                    <li>
+                        <i class="devicon devicon-spring-plain"></i>
+                        <p>Spring</p>
+                    </li>
+                    <li>
+                        <i class="devicon devicon-firebase-plain"></i>
+                        <p>Firebase</p>
+                    </li>
+                    <li>
+                        <i
+                            class="devicon devicon-amazonwebservices-original"
+                        ></i>
+                        <p>AWS</p>
                     </li>
                 </ul>
             </section>
@@ -178,7 +200,7 @@
                     <ul>
                         <li>
                             <i class="fa-solid fa-envelope"></i>
-                            <a>Email</a>
+                            <a href="mailto:nathancai1997@gmail.com">Email</a>
                         </li>
                         <li>
                             <i class="fa-brands fa-github"></i>
