added functionality which adds projects based from an array of objects

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             src="https://kit.fontawesome.com/f00cdf3170.js"
             crossorigin="anonymous"
         ></script>
-        <script src="./index.js" defer></script>
+        <script src="./navigation.js" defer></script>
+        <script src="./projects.js" defer></script>
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
@@ -20,7 +21,7 @@
         <!-- Nav links 
             when clicked user will be sent to the appropriate section-->
 
-        <header class="navigation visible">
+        <header class="navigation">
             <div class="navigation__logo-con">
                 <a href="#home">NJC</a>
             </div>
@@ -102,64 +103,12 @@
                 id="projects"
             >
                 <h3>My Projects</h3>
-                <section>
+                <section class="projects">
                     <!-- Each project container holds:
                         - a brief image of the final product
                         - title of the project
                         - a brief description of the project
                         - links to the published site and the github repo to see the code used-->
-                    <div class="projects__container">
-                        <img src="" alt="Project" />
-                        <h4>Project Title</h4>
-                        <p>Brief description</p>
-                        <div class="icon-container">
-                            <a href="">
-                                <i class="fa-brands fa-github"></i>
-                            </a>
-                            <a href="">
-                                <i class="fa-solid fa-paper-plane"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="projects__container">
-                        <img src="" alt="Project" />
-                        <h4>Project Title</h4>
-                        <p>Brief description</p>
-                        <div class="icon-container">
-                            <a href="">
-                                <i class="fa-brands fa-github"></i>
-                            </a>
-                            <a href="">
-                                <i class="fa-solid fa-paper-plane"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="projects__container">
-                        <img src="" alt="Project" />
-                        <h4>Project Title</h4>
-                        <p>Brief description</p>
-                        <div class="icon-container">
-                            <a href="">
-                                <i class="fa-brands fa-github"></i>
-                            </a>
-                            <a href="">
-                                <i class="fa-solid fa-paper-plane"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="projects__container">
-                        <img src="" alt="Project" />
-                        <h4>Project Title</h4>
-                        <p>Brief description</p>
-                        <div class="icon-container">
-                            <a href="">
-                                <i class="fa-brands fa-github"></i>
-                            </a>
-                            <a href="">
-                                <i class="fa-solid fa-paper-plane"></i>
-                            </a>
-                        </div>
-                    </div>
                 </section>
             </section>
             <!-- 
