added more accent colors throughout the portfolio, updated wallpaper url filepath

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 id="home"
             >
                 <div>
-                    <h1>I'm Nathan</h1>
+                    <h1>I'm <span>Nathan</span></h1>
                     <p>Software Developer Trainee</p>
                 </div>
             </section>
@@ -54,7 +54,7 @@
                 class="container__section container__section--secondary-color"
                 id="skills"
             >
-                <h3>What I know</h3>
+                <h3>What I <span>know</span></h3>
                 <!-- languages learnt will be listed as icons with the title underneath -->
                 <ul>
                     <li>
@@ -122,16 +122,16 @@
                 <div>
                     <h3>Who am I?</h3>
                     <p>
-                        An aspiring software developer, I enjoy creating things
-                        and admiring the finished product.
+                        An <span>aspiring software developer</span>, I enjoy
+                        creating things and admiring the finished product.
                     </p>
                     <p>
-                        I began my journey in 2021, where I learnt python during
-                        University, without much thought about making it a
-                        career. As I continued to learn more and more I started
-                        to wonder if I could be able to get a job without a
-                        proper Undergraduate degree, which made me want to try
-                        pursue a career in the field.
+                        My <span>journey began in 2021</span>, where I learnt
+                        python during University, without much thought about
+                        making it a career. As I continued to learn more and
+                        more I started to wonder if I could be able to get a job
+                        without a proper Undergraduate degree, which made me
+                        <span>want to pursue</span> a career in the field.
                     </p>
                     <p>Besides that I'm reading One Piece for the nth time.</p>
                 </div>
