updating index.html, adding new assets, updating project.js

--- a/index.html
+++ b/index.html
@@ -1,176 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./styles.css" />
-        <script
-            src="https://kit.fontawesome.com/f00cdf3170.js"
-            crossorigin="anonymous"
-        ></script>
-        <script src="./navigation.js" defer></script>
-        <script src="./projects.js" defer></script>
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
-        />
-        <title>Nathan Cai - Software Developer Trainee</title>
-    </head>
-    <body>
-        <!-- Nav links 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://kit.fontawesome.com/f00cdf3170.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./navigation.js" defer></script>
+    <script src="./projects.js" defer></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
+    <title>Nathan Cai - Software Developer Trainee</title>
+  </head>
+  <body>
+    <!-- Nav links 
             when clicked user will be sent to the appropriate section-->
 
-        <header class="navigation">
-            <div class="navigation__logo-con">
-                <a href="#home">NJC</a>
-            </div>
-            <nav class="navigation__links">
-                <a href="#skills">Skills</a>
-                <a href="#projects">Projects</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </header>
-        <main class="container">
-            <!-- 
+    <header class="navigation">
+      <div class="navigation__logo-con">
+        <a href="#home">NJC</a>
+      </div>
+      <nav class="navigation__links">
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+    <main class="container">
+      <!-- 
             Home section
             Name and current occupation
             -->
-            <section
-                class="container__section container__section--primary-color"
-                id="home"
-            >
-                <div>
-                    <h1>I'm <span>Nathan</span></h1>
-                    <p>Software Developer Trainee</p>
-                </div>
-            </section>
-            <!-- 
+      <section
+        class="container__section container__section--primary-color"
+        id="home"
+      >
+        <div>
+          <h1>I'm <span>Nathan</span></h1>
+          <p>Software Developer Trainee</p>
+        </div>
+      </section>
+      <!-- 
             Skills section
             List of all the languages that I have learnt
             -->
-            <section
-                class="container__section container__section--secondary-color"
-                id="skills"
-            >
-                <h3>What I <span>know</span></h3>
-                <!-- languages learnt will be listed as icons with the title underneath -->
-                <ul>
-                    <li>
-                        <i class="devicon devicon-html5-plain"></i>
-                        <p>HTML</p>
-                    </li>
-                    <li>
-                        <i class="devicon devicon-css3-plain"></i>
-                        <p>CSS</p>
-                    </li>
-                    <li>
-                        <i class="devicon devicon-sass-original"></i>
-                        <p>SASS</p>
-                    </li>
-                    <li>
-                        <i class="devicon devicon-javascript-plain"></i>
-                        <p>JS</p>
-                    </li>
-                    <li>
-                        <i class="devicon devicon-java-plain"></i>
-                        <p>Java</p>
-                    </li>
-                    <li>
-                        <i class="devicon devicon-spring-plain"></i>
-                        <p>Spring</p>
-                    </li>
-                    <li>
-                        <i class="devicon devicon-firebase-plain"></i>
-                        <p>Firebase</p>
-                    </li>
-                    <li>
-                        <i
-                            class="devicon devicon-amazonwebservices-original"
-                        ></i>
-                        <p>AWS</p>
-                    </li>
-                </ul>
-            </section>
-            <!-- 
+      <section
+        class="container__section container__section--secondary-color"
+        id="skills"
+      >
+        <h3>What I <span>know</span></h3>
+        <!-- languages learnt will be listed as icons with the title underneath -->
+        <ul>
+          <li>
+            <i class="devicon devicon-html5-plain"></i>
+            <p>HTML</p>
+          </li>
+          <li>
+            <i class="devicon devicon-css3-plain"></i>
+            <p>CSS</p>
+          </li>
+          <li>
+            <i class="devicon devicon-sass-original"></i>
+            <p>SASS</p>
+          </li>
+          <li>
+            <i class="devicon devicon-javascript-plain"></i>
+            <p>JS</p>
+          </li>
+          <li>
+            <i class="devicon devicon-java-plain"></i>
+            <p>Java</p>
+          </li>
+          <li>
+            <i class="devicon devicon-spring-plain"></i>
+            <p>Spring</p>
+          </li>
+          <li>
+            <i class="devicon devicon-firebase-plain"></i>
+            <p>Firebase</p>
+          </li>
+          <li>
+            <i class="devicon devicon-amazonwebservices-original"></i>
+            <p>AWS</p>
+          </li>
+        </ul>
+      </section>
+      <!-- 
             Projects section
             List of all the projects that I have completed
             link Git hub and published project url
             -->
-            <section
-                class="container__section container__section--primary-color"
-                id="projects"
-            >
-                <h3>My Projects</h3>
-                <section class="projects">
-                    <!-- Each project container holds:
+      <section
+        class="container__section container__section--primary-color"
+        id="projects"
+      >
+        <h3>My Projects</h3>
+        <section class="projects">
+          <!-- Each project container holds:
                         - a brief image of the final product
                         - title of the project
                         - a brief description of the project
                         - links to the published site and the github repo to see the code used-->
-                </section>
-            </section>
-            <!-- 
+        </section>
+      </section>
+      <!-- 
             About section
             Brief description about myself and what I aspire to be
             -->
-            <section
-                class="container__section container__section--secondary-color"
-                id="about"
-            >
-                <div>
-                    <h3>Who am I?</h3>
-                    <p>
-                        An <span>aspiring software developer</span>, I enjoy
-                        creating things and admiring the finished product.
-                    </p>
-                    <p>
-                        My <span>journey began in 2021</span>, where I learnt
-                        python during University, without much thought about
-                        making it a career. As I continued to learn more and
-                        more I started to wonder if I could be able to get a job
-                        without a proper Undergraduate degree, which made me
-                        <span>want to pursue</span> a career in the field.
-                    </p>
-                    <p>Besides that I'm reading One Piece for the nth time.</p>
-                </div>
-            </section>
-            <!-- 
+      <section
+        class="container__section container__section--secondary-color"
+        id="about"
+      >
+        <div>
+          <h3>Who am I?</h3>
+          <p>
+            Before starting my journey with <span>_nology</span> I was a self
+            taught developer, fumbling their way through
+            <span>front-end development</span>
+            as a hobby. Not believing that I will be able to make a career out
+            of it, but since I’ve been given a platform to hone my skills, I’ll
+            try to find some proper footing and
+            <span>start running.</span>
+          </p>
+          <p>
+            Aside from fumbling around, I am usually reading and discover new
+            book/manga series, walking my dog, watching netflix, brainstorming
+            some fun short story ideas and learning how to draw. One of my
+            <span>goals</span>
+            is to create an animated short film, but with my current drawing
+            skills, that’ll happen in a couple more centuries. Unless stick
+            figures count, then maybe only a couple of decades.
+          </p>
+        </div>
+      </section>
+      <!-- 
             Home Page 
             My Contact details, linkedIn page, GitHub profile, email address
             -->
-            <section
-                class="container__section container__section--primary-color"
-                id="contact"
-            >
-                <div class="contact-links">
-                    <h3>Contact Me</h3>
-                    <ul>
-                        <li>
-                            <i class="fa-solid fa-envelope"></i>
-                            <a href="mailto:nathancai1997@gmail.com">Email</a>
-                        </li>
-                        <li>
-                            <i class="fa-brands fa-github"></i>
-                            <a href="https://github.com/xNapha" target="_blank"
-                                >GitHub</a
-                            >
-                        </li>
-                        <li>
-                            <i class="fa-brands fa-linkedin"></i>
-                            <a
-                                href="https://www.linkedin.com/in/nathan-cai-6a9b251a1/"
-                                target="_blank"
-                                >LinkedIn</a
-                            >
-                        </li>
-                    </ul>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <p>Nathan Cai</p>
-        </footer>
-    </body>
+      <section
+        class="container__section container__section--primary-color"
+        id="contact"
+      >
+        <div class="contact-links">
+          <h3>Contact Me</h3>
+          <ul>
+            <li>
+              <i class="fa-solid fa-envelope"></i>
+              <a href="mailto:nathancai1997@gmail.com">Email</a>
+            </li>
+            <li>
+              <i class="fa-brands fa-github"></i>
+              <a href="https://github.com/xNapha" target="_blank">GitHub</a>
+            </li>
+            <li>
+              <i class="fa-brands fa-linkedin"></i>
+              <a
+                href="https://www.linkedin.com/in/nathan-cai-6a9b251a1/"
+                target="_blank"
+                >LinkedIn</a
+              >
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <p>Nathan Cai</p>
+    </footer>
+  </body>
 </html>
